Add links to new courses

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@ layout: default
           <h3 class="panel-title">Course Webpages</h3>
         </div>
         <div class="panel-body">
+          <p class="center"><a href="https://iondune.github.io/csc357/" class="btn btn-default"><i class="fa fa-book fa-3x" aria-hidden="true"></i> CSC 357: Systems Programming</a></p>
           <p class="center"><a href="https://iondune.github.io/csc371/" class="btn btn-default"><i class="fa fa-gamepad fa-3x" aria-hidden="true"></i> CSC 371: Game Design</a></p>
+          <p class="center"><a href="https://iondune.github.io/csc471/" class="btn btn-default"><i class="fa fa-globe fa-3x" aria-hidden="true"></i> CSC 471: Introduction to Computer Graphics</a></p>
           <p class="center"><a href="https://iondune.github.io/csc473/" class="btn btn-default"><i class="fa fa-paint-brush fa-3x" aria-hidden="true"></i> CSC 473: Advanced Rendering</a></p>
         </div>
     </div>
