Add link to future 476 section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ layout: default
           <p class="center"><a href="https://iondune.github.io/csc371/" class="btn btn-default"><i class="fa fa-gamepad fa-3x" aria-hidden="true"></i> CSC 371: Game Design</a></p>
           <p class="center"><a href="https://iondune.github.io/csc471/" class="btn btn-default"><i class="fa fa-globe fa-3x" aria-hidden="true"></i> CSC 471: Introduction to Computer Graphics</a></p>
           <p class="center"><a href="https://iondune.github.io/csc473/" class="btn btn-default"><i class="fa fa-paint-brush fa-3x" aria-hidden="true"></i> CSC 473: Advanced Rendering</a></p>
+          <p class="center"><a href="https://iondune.github.io/csc476/" class="btn btn-default"><i class="fa fa-puzzle-piece fa-3x" aria-hidden="true"></i> CSC 476: Real-Time 3D Computer Graphics Software</a></p>
         </div>
     </div>
   </div>
