Bootstrap v4.0.0 and style update

--- a/index.html
+++ b/index.html
@@ -4,19 +4,45 @@ layout: default
 
 <div class="container" id="content">
 
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h3 class="panel-title">Course Webpages</h3>
-        </div>
-        <div class="panel-body">
-          <p class="center"><a href="https://iondune.github.io/csc371/" class="btn btn-default"><i class="fa fa-gamepad fa-3x" aria-hidden="true"></i> CSC 371: Game Design</a></p>
-          <p class="center"><a href="https://iondune.github.io/csc471/" class="btn btn-default"><i class="fa fa-globe fa-3x" aria-hidden="true"></i> CSC 471: Introduction to Computer Graphics</a></p>
-          <p class="center"><a href="https://iondune.github.io/csc473/" class="btn btn-default"><i class="fa fa-paint-brush fa-3x" aria-hidden="true"></i> CSC 473: Advanced Rendering</a></p>
-          <p class="center"><a href="https://iondune.github.io/csc476/" class="btn btn-default"><i class="fa fa-puzzle-piece fa-3x" aria-hidden="true"></i> CSC 476: Real-Time 3D Computer Graphics Software</a></p>
-        </div>
-    </div>
+  <div class="jumbotron">
+    <h1 class="display-3">Cal Poly - Ian Dunn</h1>
+    <p class="lead">See individual course websites below.</p>
   </div>
 
-</div>
+  <div class="row">
+
+    <div class="col-md-6 col-xl-3">
+      <div class="card text-white mb-3" style="background-color: #34C1DB;">
+        <div class="card-body">
+          <p class="center"><a class="text-white" href="https://iondune.github.io/csc371/"><i class="fa fa-gamepad fa-3x" aria-hidden="true"></i><h4>CSC 371: Game Design</h4></a></p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-6 col-xl-3">
+      <div class="card text-white mb-3" style="background-color: #6B57BC;">
+        <div class="card-body">
+          <p class="center"><a class="text-white" href="https://iondune.github.io/csc471/"><i class="fa fa-globe fa-3x" aria-hidden="true"></i><h4>CSC 471: Introduction to Computer Graphics</h4></a></p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-6 col-xl-3">
+      <div class="card text-white mb-3" style="background-color: #E97834;">
+        <div class="card-body">
+          <p class="center"><a class="text-white" href="https://iondune.github.io/csc473/"><i class="fa fa-paint-brush fa-3x" aria-hidden="true"></i><h4>CSC 473: Advanced Rendering</h4></a></p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-6 col-xl-3">
+      <div class="card text-white mb-3" style="background-color: #347CA5;">
+        <div class="card-body">
+          <p class="center"><a class="text-white" href="https://iondune.github.io/csc476/"><i class="fa fa-puzzle-piece fa-3x" aria-hidden="true"></i><h4>CSC 476: Real-Time 3D Computer Graphics Software</h4></a></p>
+        </div>
+      </div>
+    </div>
+
+  </div> <!-- .row -->
+
+</div> <!-- #content -->
