--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@ layout: default
   <div class="jumbotron">
     <h1 class="display-3">Cal Poly - Ian Dunn</h1>
     <p class="lead">See individual course websites below.</p>
+    <hr class="my-4">
+    <p>My office hours for spring quarter are:</p>
+    <p><strong>Monday, Friday</strong> 11:10am - 12:00pm</p>
+    <p><strong>Wednesday</strong> 10:10am - 11:00am <em>by appointment (email me)</em></p>
   </div>
 
   <div class="row">
