Add archival notice

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@ layout: default
     <h1 class="display-3">Cal Poly - Ian Dunn</h1>
     <p class="lead">See individual course websites below.</p>
     <hr class="my-4">
-    <p>My office hours for spring quarter are:</p>
-    <p><strong>Monday, Friday</strong> 11:10am - 12:00pm</p>
-    <p><strong>Wednesday</strong> 10:10am - 11:00am <em>by appointment (email me)</em></p>
+    <p>
+      I am no longer teaching at Cal Poly, but these websites will remain up for archival purposes.
+      However, you can find most of the useful information in my free online textbook, <a href="https://graphicscompendium.com/"><i>Graphics Programming Compendium</i></a>.
+      To find out what I'm up to these days, check out <a href="https://iondune.com/">iondune.com</a>.
+    </p>
   </div>
 
   <div class="row">
